do a lot of stuff: changing transactions now possible
