# dimediary/DimeDiaryRest/src/main/java/com/dimediary/rest/controller/BalanceController.java
@@ -5,8 +5,10 @@ import com.dimediary.openapi.model.Balance;
 import com.dimediary.port.in.BalanceUseCase;
 import com.dimediary.rest.controller.helper.ResponseFactory;
 import com.dimediary.rest.converter.BalanceRestConverter;
+import com.dimediary.rest.converter.LocalDateConverter;
 import io.swagger.annotations.Api;
 import java.time.LocalDate;
+import java.time.format.DateTimeParseException;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -36,8 +38,16 @@ public class BalanceController implements BalanceApi {
 
   @Override
   public ResponseEntity<List<Balance>> getBalances(
-      final UUID bankAccountId, final LocalDate dateFrom,
-      final LocalDate dateUntil) {
+      final UUID bankAccountId, final String dateFromString,
+      final String dateUntilString) {
+    final LocalDate dateFrom;
+    final LocalDate dateUntil;
+    try {
+      dateFrom = LocalDateConverter.isoStringToLocalDate(dateFromString);
+      dateUntil = LocalDateConverter.isoStringToLocalDate(dateUntilString);
+    } catch (final DateTimeParseException e) {
+      return ResponseEntity.badRequest().build();
+    }
     return this.responseFactory
         .ok(this.balanceUseCase.getBalancesFollowingDays(bankAccountId, dateFrom, dateUntil)
             .stream().map(this.balanceRestConverter::from).collect(
