# dimediary/DimeDiaryRest/src/main/java/com/dimediary/rest/controller/TransactionController.java
@@ -4,9 +4,11 @@ import com.dimediary.openapi.api.TransactionApi;
 import com.dimediary.openapi.model.Transaction;
 import com.dimediary.port.in.TransactionProvider;
 import com.dimediary.rest.controller.helper.ResponseFactory;
+import com.dimediary.rest.converter.LocalDateConverter;
 import com.dimediary.rest.converter.TransactionRestConverter;
 import io.swagger.annotations.Api;
 import java.time.LocalDate;
+import java.time.format.DateTimeParseException;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -39,7 +41,7 @@ public class TransactionController implements TransactionApi {
 
 
   @Override
-  public ResponseEntity<Transaction> createTransaction(final Transaction transaction) {
+  public ResponseEntity<Transaction> saveTransaction(final Transaction transaction) {
     return this.responseFactory.created(this.transactionRestConverter
         .from(this.transactionProvider
             .persistTransaction(this.transactionRestConverter.to(transaction))));
@@ -52,9 +54,17 @@ public class TransactionController implements TransactionApi {
   }
 
   @Override
-  public ResponseEntity<List<Transaction>> getTransactions(final LocalDate dateFrom,
-      final LocalDate dateUntil,
+  public ResponseEntity<List<Transaction>> getTransactions(final String dateFromString,
+      final String dateUntilString,
       final Optional<UUID> bankAccountName) {
+    final LocalDate dateFrom;
+    final LocalDate dateUntil;
+    try {
+      dateFrom = LocalDateConverter.isoStringToLocalDate(dateFromString);
+      dateUntil = LocalDateConverter.isoStringToLocalDate(dateUntilString);
+    } catch (final DateTimeParseException e) {
+      return ResponseEntity.badRequest().build();
+    }
     final List<com.dimediary.domain.Transaction> transactions;
     if (bankAccountName.isPresent()) {
       transactions = this.transactionProvider
@@ -65,17 +75,6 @@ public class TransactionController implements TransactionApi {
 
     return this.responseFactory.ok(transactions.stream().map(this.transactionRestConverter::from)
         .collect(Collectors.toList()));
-  }
-
-  @Override
-  public ResponseEntity<Void> updateTransaction(final UUID transactionId,
-      final Transaction transaction) {
-    if (!transactionId.equals(transaction.getId())) {
-      return this.responseFactory.badRequest();
-    }
-    this.transactionProvider
-        .persistTransaction(this.transactionRestConverter.to(transaction));
-    return this.responseFactory.okNoContent();
   }
 
 
