# openapi/schema.yaml
@@ -16,14 +16,14 @@ paths:
           name: dateFrom
           schema:
             type: string
-            format: date
+            description: date in format yyyy-MM-dd
           required: true
           description: Load transactions from this date on
         - in: query
           name: dateUntil
           schema:
             type: string
-            format: date
+            description: date in format yyyy-MM-dd
           required: true
           description: Load transactions until this date
         - in: query
@@ -42,10 +42,10 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Transaction'
-    post:
-      summary: save new transaction
-      description: save new transaction
-      operationId: createTransaction
+    put:
+      summary: save transaction
+      description: save transaction
+      operationId: saveTransaction
       tags:
         - Transaction
       requestBody:
@@ -62,29 +62,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/Transaction'
   /transactions/{transactionId}:
-    put:
-      summary: update transaction
-      description: update transaction
-      operationId: updateTransaction
-      tags:
-        - Transaction
-      parameters:
-        - in: path
-          name: transactionId
-          schema:
-            type: string
-            format: uuid
-          required: true
-          description: id of the transaction to update
-      requestBody:
-        description: the transaction to update
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Transaction'
-      responses:
-        "204":
-          description: transaction succesfully updated
     delete:
       summary: delete transaction
       description: delete transaction
@@ -103,10 +80,10 @@ paths:
         "204":
           description: transaction succesfully deleted
   /continuousTransactions:
-    post:
-      summary: save new continuous transaction
-      description: save new continuous transaction
-      operationId: createContinuousTransaction
+    put:
+      summary: save continuous transaction
+      description: save continuous transaction
+      operationId: saveContinuousTransaction
       tags:
         - ContinuousTransaction
       requestBody:
@@ -144,29 +121,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ContinuousTransaction'
-    put:
-      summary: update continuous transaction
-      description: update continuous transaction
-      operationId: updateContinuousTransaction
-      tags:
-        - ContinuousTransaction
-      parameters:
-        - in: path
-          name: continuousTransactionId
-          schema:
-            type: string
-            format: uuid
-          required: true
-          description: id of the continuous transaction to update
-      requestBody:
-        description: the continuous transaction to update
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ContinuousTransaction'
-      responses:
-        "204":
-          description: continuous transaction succesfully updated
     delete:
       summary: delete continuous transaction
       description: delete continuous transaction
@@ -200,10 +154,10 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Category'
-    post:
-      summary: saves a new category
-      description: saves a  category
-      operationId: createCategory
+    put:
+      summary: saves a category
+      description: saves a category
+      operationId: saveCategory
       tags:
         - Category
       requestBody:
@@ -220,29 +174,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/Category'
   /categories/{categoryId}:
-    put:
-      summary: update category
-      description: update category
-      operationId: updateCategory
-      tags:
-        - Category
-      parameters:
-        - in: path
-          name: categoryId
-          schema:
-            type: string
-            format: uuid
-          required: true
-          description: id of the category to update
-      requestBody:
-        description: category to save
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Category'
-      responses:
-        "204":
-          description: category succesfully updated
     delete:
       summary: delete category
       description: delete category
@@ -276,10 +207,10 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/BankAccountCategory'
-    post:
-      summary: saves a new bank account category
-      description: saves a new bank account category
-      operationId: createBankAccountCategory
+    put:
+      summary: saves a bank account category
+      description: saves a bank account category
+      operationId: saveBankAccountCategory
       tags:
         - BankAccountCategory
       requestBody:
@@ -296,29 +227,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/BankAccountCategory'
   /bankAccountCategories/{bankAccountCategoryId}:
-    put:
-      summary: update bank account category
-      description: update bank account category
-      operationId: updateBankAccountCategory
-      tags:
-        - BankAccountCategory
-      parameters:
-        - in: path
-          name: bankAccountCategoryId
-          schema:
-            type: string
-            format: uuid
-          required: true
-          description: name of the bank account category to update
-      requestBody:
-        description: bank account category to save
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/BankAccountCategory'
-      responses:
-        "204":
-          description: bank account category succesfully updated
     delete:
       summary: delete bank account category
       description: delete bank account category
@@ -352,10 +260,10 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/BankAccount'
-    post:
-      summary: saves a new bankaccount
+    put:
+      summary: saves a bankaccount
       description: saves a  newbankaccount
-      operationId: createBankAccount
+      operationId: saveBankAccount
       tags:
         - BankAccount
       requestBody:
@@ -393,29 +301,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BankAccount'
-    put:
-      summary: update bank account
-      description: update bankaccount
-      operationId: updateBankAccount
-      tags:
-        - BankAccount
-      parameters:
-        - in: path
-          name: bankAccountId
-          schema:
-            type: string
-            format: uuid
-          required: true
-          description: name of the bank account to update
-      requestBody:
-        description: bankaccount to save
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/BankAccount'
-      responses:
-        "204":
-          description: bank account succesfully updated
     delete:
       summary: delete bank account
       description: delete bank account
@@ -452,14 +337,14 @@ paths:
           name: dateFrom
           schema:
             type: string
-            format: date
+            description: date in format yyyy-MM-dd
           required: true
           description: first date to receive the balance
         - in: query
           name: dateUntil
           schema:
             type: string
-            format: date
+            description: date in format yyyy-MM-dd
           required: true
           description: end date to receive the balance
       responses:
@@ -501,7 +386,7 @@ components:
           type: integer
         date:
           type: string
-          format: date
+          description: date in format yyyy-MM-dd
         bankAccount:
           $ref: '#/components/schemas/BankAccount'
         category:
@@ -521,7 +406,7 @@ components:
           type: integer
         dateBegin:
           type: string
-          format: date
+          description: date in format yyyy-MM-dd
         bankAccount:
           $ref: '#/components/schemas/BankAccount'
         category:
@@ -549,7 +434,7 @@ components:
           $ref: '#/components/schemas/BankAccountCategory'
         dateStartBalance:
           type: string
-          format: date
+          description: date in format yyyy-MM-dd
         startBalanceEuroCent:
           type: integer
     BankAccountCategory:
@@ -576,6 +461,6 @@ components:
           type: string
         date:
           type: string
-          format: date
+          description: date in format yyyy-MM-dd
         balanceEuroCent:
           type: integer
